<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:anddoid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="300dp"
        android:layout_height="@dimen/text_hight"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:hint="@string/refaral_id" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="@dimen/text_width"
        android:layout_height="@dimen/text_hight"
        android:inputType="text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="@dimen/text_width"
        android:layout_height="@dimen/text_hight"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="phone"
        android:hint="@string/phone"/>

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="@dimen/text_width"
        android:layout_height="@dimen/text_hight"
        android:inputType="textPostalAddress"
        android:hint="@string/address"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="@dimen/text_width"
        android:layout_height="@dimen/text_hight"
        android:hint="@string/pan"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <!-- Upload button -->
    <Button
        android:id="@+id/btnUploadPANImage"
        android:layout_width="@dimen/text_width"
        android:layout_height="@dimen/text_hight"
        android:text="@string/upload_pan_image"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

    <!-- Image preview -->
    <ImageView
        android:id="@+id/imagePAN"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:scaleType="centerCrop"
        android:background="#E0E0E0"
        android:contentDescription="@string/PAN_IMAGE" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="@dimen/text_width"
        android:layout_height="@dimen/text_hight"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/next" />
</LinearLayout>
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

