<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:anddoid="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/SBAccountNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/accnumber"
        android:inputType="number" />

    <EditText
        android:id="@+id/bankName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bank_name"
        android:inputType="text"
         />

    <EditText
        android:id="@+id/ifsccode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IFSC_code"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/paymentDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/payment_details"
        android:inputType="text"
        />
    <ImageView
        android:id="@+id/imagePAYMENT"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:scaleType="centerCrop"
        android:background="#E0E0E0"
        android:contentDescription="@string/upload_payment_image" />

    <!-- Upload button -->
    <Button
        android:id="@+id/btnUploadPaymentImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_payment_image"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />
    <Button
        android:id="@+id/btnRegester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regester"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

</LinearLayout>
